--- a/style.css
+++ b/style.css
@@ -33,3 +33,35 @@
   border-top: none;
   background-color: #fff;
 }
+
+.buy-now-btn:hover{
+  animation: blink 500ms ease-in-out infinite, grow 1s ease-in-out infinite;
+}
+
+@keyframes blink{
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: .75;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+@keyframes grow {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.1);
+    background-color: #0af;
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+footer h2{
+  color: #0af;
+}
